# charms

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  hello-world.md  rust-toolchain.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: build-image.yml
CHIPs/: README.md
CHIPs/CHIP-0420/: README.md
app-utxo-data/: Cargo.toml
app-utxo-data/src/: lib.rs
bitcoin/: bitcoin.conf  docker-compose.yml
charms-client/: Cargo.toml
charms-client/src/: lib.rs  tx.rs
charms-data/: Cargo.toml  README.md
charms-data/proptest-regressions/: lib.txt
charms-data/src/: lib.rs  util.rs
charms-sdk/: Cargo.toml  README.md
charms-sdk/src/: lib.rs
charms-spell-checker/: Cargo.toml  README.md
charms-spell-checker/src/: app.rs  bin.rs  lib.rs  main.rs  tx.rs  v0.rs
examples/hello/: Cargo.toml
examples/hello/guest/: Cargo.toml  rustfmt.toml
examples/hello/guest/src/: lib.rs
examples/hello/src/: main.rs
examples/toad-token/: .gitignore  Cargo.toml  README.md  guest.ld  rustfmt.toml
examples/toad-token/.cargo/: config.toml
examples/toad-token/spells/: mint-nft.yaml  mint-nft.yml  mint-token.yaml  mint-token.yml  send.yaml  send.yml  send420.yaml  send420.yml
examples/toad-token/src/: lib.rs  main.rs
spell-checker/: Cargo.toml
spell-checker/src/: bin.rs  lib.rs  main.rs  sp1v3.rs  tx.rs  v0.rs
spell-prover/: Cargo.toml
spell-prover/src/: bin.rs  lib.rs  main.rs  v0.rs
src/: address.rs  app.rs  data.rs  lib.rs  main.rs  script.rs  spell.rs  spells.rs  tx.rs  validation.rs
src/cli/: app.rs  mod.rs  server.rs  spell.rs  tx.rs  wallet.rs
src/commands/: app.rs  mod.rs  spell.rs  tx.rs
src/utils/: logger.rs  mod.rs
