[package]
name = "charms-client"
description = "Charms client library"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
charms-data = { path = "../charms-data", version = "0.5.0" }
serde = { workspace = true, features = ["derive"] }
sp1-primitives = { workspace = true }
sp1-verifier = { workspace = true }
