[package]
name = "charms-data"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
ark-std = { version = "0.5.0" }
ciborium = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
postcard = { workspace = true, features = ["use-std"] }
proptest = { workspace = true }
proptest-derive = { workspace = true }
