[package]
name = "charms-data"
description = "Data types for Charms apps"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
ark-std = { version = "0.5.0" }
ciborium = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
postcard = { workspace = true, features = ["use-std"] }
proptest = { workspace = true }
proptest-derive = { workspace = true }
