[package]
name = "charms-data"
description = "Data types for Charms apps"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
ark-std = { version = "0.5.0" }
ciborium = { workspace = true }
ciborium-io = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
proptest = { workspace = true }
proptest-derive = { workspace = true }
test-strategy = { workspace = true }
