[package]
name = "charms-sdk"
description = "Charms SDK: the only dependency needed to build ZK apps on Bitcoin"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
charms-data = { path = "../charms-data", version = "0.3.4" }
sp1-zkvm = { workspace = true }
