[package]
name = "charms-spell-checker"
description = "Recursive validation of spells creating Charms"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
charms-data = { path = "../charms-data", version = "0.1.7" }
ciborium = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sp1-primitives = { workspace = true }
sp1-verifier = { workspace = true }
sp1-zkvm = { workspace = true, features = ["verify"] }
