[package]
name = "charms-spell-checker"
description = "Recursive validation of spells creating Charms"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bitcoin = { workspace = true, features = ["serde"] }
charms-data = { path = "../charms-data", version = "0.4.1" }
charms-client = { path = "../charms-client", version = "0.4.1" }
serde = { workspace = true, features = ["derive"] }
sp1-primitives = { workspace = true }
sp1-zkvm = { workspace = true, features = ["verify"] }
