[package]
name = "spell-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.0" }
bitcoin = { version = "0.32.0", features = ["serde"] }
charms-data = { path = "../charms-data" }
ciborium = { version = "0.2.2" }
serde = { version = "1.0", features = ["derive"] }
sp1-primitives = { version = "3.0.0" }
sp1-verifier = { version = "3.0.0" }
sp1-zkvm = { version = "3.0.0", features = ["verify"] }

[profile.release]
lto = "fat"
opt-level = "s"
strip = "symbols"
