[package]
name = "spell-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
charms-data = { path = "../charms-data" }
ciborium = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sp1-primitives = { workspace = true }
sp1-verifier = { workspace = true }
sp1-zkvm = { workspace = true, features = ["verify"] }
