[package]
name = "spell-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
charms-data = { path = "../charms-data" }
hex = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
sp1-primitives = { version = "3.0.0" }
sp1-verifier = { version = "3.0.0" }
sp1-zkvm = { version = "3.0.0" }

[profile.release]
lto = "fat"
opt-level = "s"
strip = "symbols"

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "sha2-v0.10.8-patch-v1" }