[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "guest"]

[profile.release]
debug = 1
codegen-units = 1
lto = "fat"

[dependencies]
charms-data = { path = "../../charms-data" }
jolt = { package = "jolt-sdk", git = "https://github.com/sigma0-dev/jolt", rev = "731194a05affbc6d4680638ca419b6eab2704e76", features = ["host"] }
guest = { path = "./guest" }

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
