[package]
name = "toad-token-guest"
version = "0.1.0"
edition = "2021"

[features]
default = ["guest"]
guest = []

[dependencies]
charms-data = { path = "../../charms-data" }
jolt = { package = "jolt-sdk", git = "https://github.com/sigma0-dev/jolt", branch = "private-attribute" }

[profile.release]
lto = "fat"
opt-level = "s"
panic = "abort"
strip = "symbols"

[profile.test]
opt-level = 3
lto = "off"
