[package]
name = "toad-token"
description = "A simple token Charms app"
version = "0.2.0-dev"
edition = "2021"

[dependencies]
charms-sdk = { path = "../../charms-sdk", version = "0.2.0-dev" }
sha2 = { version = "0.10.8" }

[profile.release]
lto = "fat"
opt-level = "s"
strip = "symbols"

[workspace]

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "sha2-v0.10.8-patch-v1" }
