[package]
name = "toad-token"
description = "A simple token Charms app"
version = "0.3.4"
edition = "2021"

[dependencies]
charms-sdk = { path = "../../charms-sdk", version = "0.3.4" }
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.10.8" }

[profile.release]
lto = "fat"
opt-level = "s"
strip = "symbols"

[workspace]

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
